--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "node-web-scraper",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": false,
   "scripts": {
-    "start": "node app"
+    "start": "node app.js"
   },
   "dependencies": {
     "express": "3.x",
