--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "node-web-scraper",
+  "name": "migrationCheckApp",
   "version": "0.0.2",
   "private": false,
   "scripts": {
     "start": "node app.js"
   },
+  "subdomain": "migrationcheck",
   "dependencies": {
     "express": "3.x",
     "express-partials": "0.x.x",
